# refloxide

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  hooks.py  mkdocs-validate.yml  mkdocs.yml  pyproject.toml  pyproject.toml.bak
.github/workflows/: ci.yml  release.yml
docs/: api.md  contributing.md  index.md
docs/api/: index.md  rust.md
docs/api/python/: refloxide.md
docs/api/python/pxr/: index.md  tjf4x4.md
docs/api/python/python/: tmm.md
docs/api_examples/: batched_scans.md  material_parameterizations.md  overview.md  roughness_configuration.md  single_scan.md  structure_definition.md
docs/stylesheets/: als.css  pygments-pymdown.css
docs/stylesheets/overrides/templates/: header.html
docs/theory/: algorithm_audit.md  eigenmode_analysis.md  electric_field_distribution.md  foundations.md  history.md  interface_matrices.md  overview.md  pipeline.md  propagation_and_assembly.md  reflection_transmission.md  roughness_debye_waller.md  roughness_framework.md  roughness_graded_interface.md  roughness_nevot_croce.md  roughness_selection_guide.md
examples/: bookended_multi_energy_repl.py  bookended_nonres_repl.py  bookended_performance_repl.py  bookended_repl.py  dft_free_hybrid_refit_repl.py  dft_model_comparison_repl.py  free_tensor_model_comparison_repl.py  mixed_uni_tensor_znpc_repl.py  model_objective_repl.py  real_data_repl.py  test_efield.ipynb  test_structures.ipynb  uni_tensor_znpc_repl.py  uniaxial_parity.py
overrides/components/: icon.html
scripts/: develop.sh  smoke_release.sh
src/: 4x4.rs  bookended.rs  c4x4.rs  error.rs  lib.rs  n.rs  optics.rs  python.rs  structure.rs  uniaxial.rs
src/ffi/: mod.rs  pyfunctions.rs  stack_repr.rs
src/kernel/: coefficients.rs  constitutive.rs  delta.rs  field.rs  geometry.rs  interface.rs  mod.rs  modes.rs  propagate.rs
src/kernel/roughness/: debye_waller.rs  dispatch.rs  graded.rs  mod.rs  nevot_croce.rs  traits.rs
src/material/: builder.rs  mod.rs  rotation.rs
src/math/: exact_inv4.rs  mod.rs
src/refloxide/: __init__.py  _core.pyi  batch.py  data.py  instrument.py  model.py  objective.py  optics.py  rust.pyi  tmm.py
src/refloxide/integrations/: __init__.py  pyref.py
src/refloxide/pxr/: __init__.py  layout.py  objective.py  stacks.py  tjf4x4.py
src/refloxide/pxr/energy/: __init__.py  bookended.py  compile.py  fused.py  migrate.py  model.py  ooc.py  orientation.py  probe.py  scatterer.py  scatterers.py  structure.py
src/refloxide/pxr/plugin/: __init__.py  batched_global.py  dft_fit.py  dispersive_instrument.py  dispersive_model.py  fitters.py  io.py  model.py  structure.py  unittensor.py
src/refloxide/python/: __init__.py  model.py  tmm.py
src/sld/: mod.rs
src/solver/: mod.rs  pipeline.rs
src/stack/: builder.rs  layer.rs  mod.rs  roughness_spec.rs
src/types/: mod.rs  parameterization.rs  scalar.rs  tensor.rs
tests/: test_batched_global_objective.py  test_bookended_fused.py  test_bookended_model_integration.py  test_compile.py  test_depth_profiles.py  test_dft_fit_geometry.py  test_energy_structure.py  test_experiment_corrections.py  test_legacy_parity.py  test_model.py  test_objective.py  test_optical_constants_cache.py  test_pyref_integration.py  test_refloxide.py  test_refloxide_model.py  test_refloxide_objective.py  test_rust_batch.py  test_scatterers.py
tests/regression/: __init__.py  _adapter.py  _analytic.py  _stacks.py  conftest.py  test_fresnel_isotropic.py  test_jeannin_python_regression.py  test_passler_matlab_regression.py  test_tangential_continuity.py  test_uniaxial_closed_form.py
tests/regression/references/: README.md  generate_jeannin.py  generate_matlab.py
