[package]
name = "refloxide"
version = "0.1.5"
edition = "2021"
description = "4x4 transfer matrix reflectivity for stratified media"
license = "GPL-3.0"
repository = "https://github.com/ALS-RSOXS/refloxide"

[lib]
name = "refloxide"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.28.3", optional = true, features = ["extension-module", "num-complex"] }
numpy = { version = "0.28", optional = true }
nalgebra = "0.33"
num-complex = "0.4"
thiserror = "1.0"
physical_constants = "0.5"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
